<resources>
    <string name="app_name">Karaoke</string>
    <string name="check_in">Check-in</string>
    <string name="order">Order</string>
    <string name="transactions">Transactions</string>
    <string name="order_today">Order today</string>
    <string name="read_card">Read Card</string>
    <string name="slogan">where payment happens，where NEWLAND discovered</string>
    <string name="product_stock">Stock:0</string>
    <string name="product_order_num">Bought:0</string>
    <string name="setting">Setting</string>
    <string name="setting_roomDetails">Room Details</string>
    <string name="setting_productDetails">Product Details</string>
    <string name="setting_AddRoom">Add Room</string>
    <string name="setting_AddProduct">Add Product</string>
    <string name="room_name">Room No</string>
    <string name="room_type">Room Type</string>
    <string name="room_price">Room Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_count">Product Count</string>
    <string name="product_price">Product Price</string>
    <string name="product_picture">Product Picture</string>
    <string name="show_name"> No. </string>
    <string name="show_pduduct_name"> Name </string>
    <string name="show_type"> Type</string>
    <string name="show_count"> Count</string>
    <string name="show_price"> Price($)</string>
    <string name="fragment_type">FragmentType</string>
    <string name="edit_detail_id">Edit Detail Id</string>
    <string name="tips_room_name">Room Name cannot be empty</string>
    <string name="tips_room_price">Room Price cannot be empty</string>
    <string name="tips_product_count">Room Count be empty</string>
    <string name="tips_product_name">Product Name cannot be empty</string>
    <string name="tips_product_price">Product Price cannot be empty</string>
    <string name="tips_product_picture">Product Picture cannot be empty</string>
    <string name="tips_add_success">  Added Successfully</string>
    <string name="tips_print">  Printing  </string>
    <string name="tips_error">  Error  </string>
    <string name="tips_rebrush">Please swipe your card again</string>
    <string name="dialog_title_edit"> Are you sure to exit editing?</string>
    <string name="dialog_title_transa"> Cancel the transaction?</string>
    <string name="dialog_btn_cancel_text">NO</string>
    <string name="dialog_btn_confirm_text">YES</string>
    <string name="dialog_btn_camera_text">Camera</string>
    <string name="dialog_btn_gallery_text">Choos from Album</string>
    <string name="order_history">Order History</string>
    <string name="order_detail">Order Detail</string>
    <string name="order_turnover">Turnover: $   </string>
    <string name="order_room_no">Room No.:   </string>
    <string name="order_product_count">Products:    </string>
    <string name="order_amount">Amount: $   </string>
    <string name="order_food_amount">Food: $   </string>
    <string name="detail_order_number">Order Number :</string>
    <string name="detail_pay_type">Pay Type :</string>
    <string name="detail_order_time">Order Time :</string>
    <string name="detail_pay_time">Pay Time :</string>
    <string name="dollar"> $ </string>
    <string name="detail_count"> X </string>
    <string name="no_record">There is no record of this transaction.</string>
    <string name="search_btn_content">"Search"</string>
    <string name="search_tip_enter">Please enter the  order number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay_cash">Cash</string>
    <string name="pay_bank_card">Bank Card</string>
    <string name="pay_scan_code">QR Code</string>
    <string name="msg_device_connecting">Device connecting...</string>
    <string name="msg_device_disconn_client">The device is automatically disconnected by the user!</string>
    <string name="msg_device_link_disconn_exeception">The device connection is abnormally disconnected!</string>
    <string name="msg_device_manager_inited">N900 device manager has inited!</string>
    <string name="msg_device_conn_succ">Device connection is successful.</string>
    <string name="msg_conn_exception">Connection exception, please check the device or re-connect...</string>
    <string name="msg_device_disconn_succ">Device disconnected successfully...</string>
    <string name="msg_device_disconn_exception">Device disconnected exception:</string>
    <string name="device_type">Device type:</string>
    <string name="connect_type">Connect type:</string>
    <string name="tv_open_card">Open cardreader</string>
    <string name="tv_close_card">Close cardreader</string>
    <string name="tv_revocate_card">Revoke reading operation</string>
    <string name="msg_swipe_insert_rf_card">Please swipe,insert or stick a card...</string>
    <string name="msg_use_card_hint">Please swipe or insert the IC Card...</string>
    <string name="msg_card_info_null">Card info is null</string>
    <string name="msg_cardreader_swiper">Cardreader recognizes [Swipe card] operation</string>
    <string name="msg_cradreader_insert">Cardreader recognizes [Insert card] operation</string>
    <string name="msg_cardreader_rfcard">Cardreader recognizes [RFCard]</string>
    <string name="msg_cardreader_rf_cpu">Cardreader recognizes [RF-CPU Card]</string>
    <string name="msg_cardreader_rf_s50">Cardreader recognizes [RF-S50 Card]</string>
    <string name="msg_cardreader_rf_s70">Cardreader recognizes [RF-S70 Card]</string>
    <string name="msg_cardreader_rf_s50_pro">Cardreader recognizes [RF-S50 pro Card]</string>
    <string name="msg_cardreader_rf_s70_pro">Cardreader recognizes [RF-S70 pro Card]</string>
    <string name="msg_cardreader_undefind">;Cardreader recognizes [Undefined RFCard]</string>
    <string name="msg_cardreader_undefind_rf">Cardreader recognizes [Undefined RFCard]</string>
    <string name="msg_time_consume">Time consuming:</string>
    <string name="msg_cancel_open_reader">Cancel to open cardreader</string>
    <string name="msg_timeout">Timeout</string>
    <string name="msg_timeout_w">Timeout</string>
    <string name="msg_reader_open_failed">Cardreader open failed</string>
    <string name="msg_reader_open_exception">Cardreader open exception：</string>
    <string name="msg_revocate_reader">Revocate reading card operation:</string>
    <string name="msg_succ">Success</string>
    <string name="msg_revocate_reader_exception">Revocate reading card operation, exception:</string>
    <string name="msg_close_reader">Close cardreader:</string>
    <string name="msg_close_reader_exception">Close cardreader, exception:</string>
    <string name="msg_device_not_conn">Device was not connected!</string>
    <string name="tv_start_scanner">Start scanning</string>
    <string name="tv_stop_scanner">Stop scanning</string>
    <string name="msg_sanner_stop">------------Scan End--------</string>
    <string name="msg_barcodes">barcodes</string>
    <string name="msg_scan_result">-----Scan Result------</string>
    <string name="msg_errorcode">errorCode</string>
    <string name="msg_errormessage">errormessage</string>
    <string name="msg_scanner_error">Scan exception, code:</string>
    <string name="msg_error_info">, exception info:</string>
    <string name="msg_start_scanner">Start scanning</string>
    <string name="msg_scan_error">Scan exception:</string>
    <string name="msg_stop_scan_begin">Stop scanning  begin</string>
    <string name="msg_stop_scan_success">Stop scan success</string>
    <string name="msg_stop_scan_error">Stop scan failed</string>
    <string name="msg_scanner_choice">Select scanner:</string>
    <string name="msg_choice_font_scanner_mode">Select front scanner mode</string>
    <string name="msg_scantype">scanType</string>
    <string name="msg_choice_back_scanner_mode">Select back scanner mode</string>
    <string name="msg_scan_timeout">scan timeout</string>
    <string name="msg_scan_cancel">cancel scan</string>
    <string name="swit_front_scanner">switch front scanner</string>
    <string name="swit_back_scanner">switch back scanner</string>
    <string name="as_pictured">as pictured</string>
    <string name="position_phone_pos">please put your phone close to POS</string>
    <string name="view_put_qrcode">Put the QR code in the box</string>
    <string name="msg_switch_front">---------------Switch front---------</string>
    <string name="msg_switch_back">---------------Switch back---------</string>
    <string name="msg_onresponse">---------------onResponse---------</string>
    <string name="content_sacnview_error_message">Unsupported scan types</string>
    <string name="tv_printer_status">Printer status</string>
    <string name="tv_set_font">Set font</string>
    <string name="tv_set_density">Set density</string>
    <string name="tv_print_pic">Print pictures</string>
    <string name="tv_print_barcode">Print barcode</string>
    <string name="tv_print_pic_by_script">Print picutre(Script)</string>
    <string name="tv_init_printer">Printer init</string>
    <string name="tv_set_linespace">Set linespace</string>
    <string name="tv_print_string">Print chars</string>
    <string name="tv_print_bill_by_script">Print bills</string>
    <string name="tv_print_qrcode">Print qrcode</string>
    <string name="msg_printer_status">Printer status:</string>
    <string name="msg_get_printer_status_error">Get printer status exception:</string>
    <string name="msg_init_printer_success">Printer init successfully</string>
    <string name="msg_init_printer_error">Printer init exception:</string>
    <string name="msg_set_font">Please set font</string>
    <string name="msg_set_font_literalType">Please set literalType:</string>
    <string name="msg_set_font_fontSettingScope">Please set fontSettingScope:</string>
    <string name="msg_set_font_fontType">Please set fontType:</string>
    <string name="msg_set_font_success">Set font successfully!</string>
    <string name="msg_set_font_cancel">Cancel setting font!</string>
    <string name="msg_set_font_error">Set font exception:</string>
    <string name="msg_set_linespace">Set linespace</string>
    <string name="msg_linespace_set_as">The linespace set is:</string>
    <string name="msg_linespace_set_success">Set linespace successfully！</string>
    <string name="msg_linespace_set_null">Linespace:null</string>
    <string name="msg_lincspace_set_cancel">Cancel setting linespace</string>
    <string name="msg_linespace_set_error">Set linespace exception:</string>
    <string name="msg_set_density">Pleasee set density(0-15):</string>
    <string name="msg_print_density_set_as">Density set is:</string>
    <string name="msg_print_density_success">Set density successfully!</string>
    <string name="msg_print_density_set_null">Density:null</string>
    <string name="msg_print_density_set_cancel">Cancel setting density</string>
    <string name="msg_print_density_error">Set density exception:</string>
    <string name="msg_print_error_and_printer_status_abnormal">Print failed!Printer status is not normal</string>
    <string name="msg_is_printing">Printing......</string>
    <string name="msg_pos_purchase_order">xxPOS sales slip</string>
    <string name="msg_merchant_name">MERCHANT NAME:Newland</string>
    <string name="msg_operator_NO">OPERATOR NO.:001</string>
    <string name="msg_consume_type">Consumption type:Consume Store No.:123455432112345</string>
    <string name="msg_merchant_name_byd">Store name:Store 1</string>
    <string name="msg_print_result">Print result:</string>
    <string name="msg_print_string_error">Print string exception:</string>
    <string name="msg_is_printing_pic">Printing pictures......</string>
    <string name="msg_start_date">Start time:</string>
    <string name="msg_print_pic_success">Print pictures successfully!</string>
    <string name="msg_finished_date">End time:</string>
    <string name="msg_print_pic_error">Print pictures failed!</string>
</resources>