<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Setting"
            android:textSize="30dp"
            android:textColor="@android:color/white"
          />

    </androidx.appcompat.widget.Toolbar>>

    <Button
        android:id="@+id/room_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:text="@string/setting_roomDetails"
        android:drawableRight="@drawable/icon_into_right"
        />

    <Button
        android:id="@+id/product_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:text="@string/setting_productDetails"
        android:drawableRight="@drawable/icon_into_right"

        />

    <Button
        android:id="@+id/add_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:text="@string/setting_AddRoom"
        android:drawableRight="@drawable/icon_into_right"
        />

    <Button
        android:id="@+id/add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:text="@string/setting_AddProduct"
        android:drawableRight="@drawable/icon_into_right"
        />



</LinearLayout>