<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/set_product_picture"
        android:layout_marginLeft="10dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/product_image"
        />
    <TextView
        android:id="@+id/set_product_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="25dp"
        android:text="@string/product_name" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/set_product_count"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/product_count" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/set_product_price"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/product_price" />
</LinearLayout>
