<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">


    <Button
        android:id="@+id/picture_gllary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_btn_gallery_text"
        android:background="@drawable/shape_dialog"
        android:textAllCaps="false"
        android:textSize="25dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        />
    <Button
        android:id="@+id/picture_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_btn_camera_text"
        android:background="@android:color/white"
        android:textAllCaps="false"
        android:textSize="25dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:alpha="0.5"
        android:background="@android:color/darker_gray"
        />
    <Button
        android:id="@+id/picture_cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_btn_cancel_text"
        android:background="@drawable/shape_dialog"
        android:textAllCaps="false"
        android:textSize="25dp"/>
</LinearLayout>