<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_order_detail_product_picture"
        android:layout_marginLeft="2dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/product_image"
        />
    <TextView
        android:id="@+id/tv_order_detail_product_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:textSize="15sp"
        android:text="@string/show_pduduct_name" />
    <Space
        android:layout_width="30dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_order_detail_product_count"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/show_count" />

    <Space
        android:layout_width="30dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_order_detail_product_price"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="match_parent"
        android:text="@string/show_price" />
</LinearLayout>
