<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ProductDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set_product_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/product_name" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/set_product_count"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/product_count" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/set_product_price"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/product_price" />
    </LinearLayout>

    <!-- 标题和内容间隔-->
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/project_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.baoyz.swipemenulistview.SwipeMenuListView>



</LinearLayout>