<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/shape_circle_pad_white"
    android:orientation="vertical">

    <!--订单交易记录信息-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@android:color/white"
        >

        <TextView
            android:id="@+id/history_order_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="201908271234"
            android:textSize="15dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/history_order_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@android:color/black"
            android:text="201908271234"
            android:textSize="15dp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/order_room_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_room_no"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/order_product_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/order_product_count"
            android:textSize="15dp"
            android:layout_toRightOf="@+id/order_room_no"
            />


        <TextView
            android:id="@+id/order_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/order_amount"
            android:textSize="15dp"
            android:textColor="@color/coloryellow"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
</LinearLayout>