<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_npt"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/bg"/>
    </LinearLayout>
    <GridLayout
        android:id="@+id/gl_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:rowCount="2"
        >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/bt_checkin"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/icon_reserve_norma"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_in"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/bt_order"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/icon_order_norma"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/bt_settings"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/icon_settings_normal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/bt_transactions"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/icon_transactions_normal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactions"/>
        </LinearLayout>




    </GridLayout>
</LinearLayout>